# bot-mc

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  versions.json
.github/workflows/: push-docker-image.yml
migrations/2025-02-04-112906_create_bot_filters/: up.sql
migrations/2025-02-04-112906_create_bot_mc/: up.sql
src/: lib.rs  main.rs
src/client/: data.rs  error.rs  mod.rs  serenity_handler.rs
src/commands/: create.rs  delete.rs  list.rs  list_severs.rs  mod.rs  start.rs  stop.rs
src/database/: schemas.rs
src/database/models/: servers.rs
src/interarction/: autocomplete_version.rs  button_list.rs  mod.rs
src/util/: logger.rs  mod.rs  msg.rs
